--- a/dev/example/index.html
+++ b/dev/example/index.html
@@ -1,2 +1,108 @@
 <!DOCTYPE html>
-<html lang="en"><head><meta charset="UTF-8"/><meta name="viewport" content="width=device-width, initial-scale=1.0"/><title>Example · StochasticInterpolants.jl</title><meta name="title" content="Example · StochasticInterpolants.jl"/><meta property="og:title" content="Example · StochasticInterpolants.jl"/><meta property="twitter:title" content="Example · StochasticInterpolants.jl"/><meta name="description" content="Documentation for StochasticInterpolants.jl."/><meta property="og:description" content="Documentation for StochasticInterpolants.jl."/><meta property="twitter:description" content="Documentation for StochasticInterpolants.jl."/><meta property="og:url" content="https://nmucke.github.io/StochasticInterpolants.jl/example/"/><meta property="twitter:url" content="https://nmucke.github.io/StochasticInterpolants.jl/example/"/><link rel="canonical" href="https://nmucke.github.io/StochasticInterpolants.jl/example/"/><script data-outdated-warner src="../assets/warner.js"></script><link href="https://cdnjs.cloudflare.com/ajax/libs/lato-font/3.0.0/css/lato-font.min.css" rel="stylesheet" type="text/css"/><link href="https://cdnjs.cloudflare.com/ajax/libs/juliamono/0.050/juliamono.min.css" rel="stylesheet" type="text/css"/><link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/fontawesome.min.css" rel="stylesheet" type="text/css"/><link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/solid.min.css" rel="stylesheet" type="text/css"/><link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/brands.min.css" rel="stylesheet" type="text/css"/><link href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.16.8/katex.min.css" rel="stylesheet" type="text/css"/><script>documenterBaseURL=".."</script><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.min.js" data-main="../assets/documenter.js"></script><script src="../search_index.js"></script><script src="../siteinfo.js"></script><script src="../../versions.js"></script><link class="docs-theme-link" rel="stylesheet" type="text/css" href="../assets/themes/catppuccin-mocha.css" data-theme-name="catppuccin-mocha"/><link class="docs-theme-link" rel="stylesheet" type="text/css" href="../assets/themes/catppuccin-macchiato.css" data-theme-name="catppuccin-macchiato"/><link class="docs-theme-link" rel="stylesheet" type="text/css" href="../assets/themes/catppuccin-frappe.css" data-theme-name="catppuccin-frappe"/><link class="docs-theme-link" rel="stylesheet" type="text/css" href="../assets/themes/catppuccin-latte.css" data-theme-name="catppuccin-latte"/><link class="docs-theme-link" rel="stylesheet" type="text/css" href="../assets/themes/documenter-dark.css" data-theme-name="documenter-dark" data-theme-primary-dark/><link class="docs-theme-link" rel="stylesheet" type="text/css" href="../assets/themes/documenter-light.css" data-theme-name="documenter-light" data-theme-primary/><script src="../assets/themeswap.js"></script></head><body><div id="documenter"><nav class="docs-sidebar"><div class="docs-package-name"><span class="docs-autofit"><a href="../">StochasticInterpolants.jl</a></span></div><button class="docs-search-query input is-rounded is-small is-clickable my-2 mx-auto py-1 px-2" id="documenter-search-query">Search docs (Ctrl + /)</button><ul class="docs-menu"><li><a class="tocitem" href="../">Home</a></li><li class="is-active"><a class="tocitem" href>Example</a></li></ul><div class="docs-version-selector field has-addons"><div class="control"><span class="docs-label button is-static is-size-7">Version</span></div><div class="docs-selector control is-expanded"><div class="select is-fullwidth is-size-7"><select id="documenter-version-selector"></select></div></div></div></nav><div class="docs-main"><header class="docs-navbar"><a class="docs-sidebar-button docs-navbar-link fa-solid fa-bars is-hidden-desktop" id="documenter-sidebar-button" href="#"></a><nav class="breadcrumb"><ul class="is-hidden-mobile"><li class="is-active"><a href>Example</a></li></ul><ul class="is-hidden-tablet"><li class="is-active"><a href>Example</a></li></ul></nav><div class="docs-right"><a class="docs-navbar-link" href="https://github.com/nmucke/StochasticInterpolants.jl" title="View the repository on GitHub"><span class="docs-icon fa-brands"></span><span class="docs-label is-hidden-touch">GitHub</span></a><a class="docs-navbar-link" href="https://github.com/nmucke/StochasticInterpolants.jl/blob/main/docs/src/example.md" title="Edit source on GitHub"><span class="docs-icon fa-solid"></span></a><a class="docs-settings-button docs-navbar-link fa-solid fa-gear" id="documenter-settings-button" href="#" title="Settings"></a><a class="docs-article-toggle-button fa-solid fa-chevron-up" id="documenter-article-toggle-button" href="javascript:;" title="Collapse all docstrings"></a></div></header><article class="content" id="documenter-page"><h1 id="Example"><a class="docs-heading-anchor" href="#Example">Example</a><a id="Example-1"></a><a class="docs-heading-anchor-permalink" href="#Example" title="Permalink"></a></h1><pre><code class="language-julia hljs">1+1</code></pre><pre><code class="language-julia hljs">1+2</code></pre><pre class="documenter-example-output"><code class="nohighlight hljs ansi">3</code></pre></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../">« Home</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="auto">Automatic (OS)</option><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="catppuccin-latte">catppuccin-latte</option><option value="catppuccin-frappe">catppuccin-frappe</option><option value="catppuccin-macchiato">catppuccin-macchiato</option><option value="catppuccin-mocha">catppuccin-mocha</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.8.0 on <span class="colophon-date" title="Tuesday 7 January 2025 08:42">Tuesday 7 January 2025</span>. Using Julia version 1.11.2.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+<html lang="en"><head><meta charset="UTF-8"/><meta name="viewport" content="width=device-width, initial-scale=1.0"/><title>Example · StochasticInterpolants.jl</title><meta name="title" content="Example · StochasticInterpolants.jl"/><meta property="og:title" content="Example · StochasticInterpolants.jl"/><meta property="twitter:title" content="Example · StochasticInterpolants.jl"/><meta name="description" content="Documentation for StochasticInterpolants.jl."/><meta property="og:description" content="Documentation for StochasticInterpolants.jl."/><meta property="twitter:description" content="Documentation for StochasticInterpolants.jl."/><meta property="og:url" content="https://nmucke.github.io/StochasticInterpolants.jl/example/"/><meta property="twitter:url" content="https://nmucke.github.io/StochasticInterpolants.jl/example/"/><link rel="canonical" href="https://nmucke.github.io/StochasticInterpolants.jl/example/"/><script data-outdated-warner src="../assets/warner.js"></script><link href="https://cdnjs.cloudflare.com/ajax/libs/lato-font/3.0.0/css/lato-font.min.css" rel="stylesheet" type="text/css"/><link href="https://cdnjs.cloudflare.com/ajax/libs/juliamono/0.050/juliamono.min.css" rel="stylesheet" type="text/css"/><link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/fontawesome.min.css" rel="stylesheet" type="text/css"/><link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/solid.min.css" rel="stylesheet" type="text/css"/><link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/brands.min.css" rel="stylesheet" type="text/css"/><link href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.16.8/katex.min.css" rel="stylesheet" type="text/css"/><script>documenterBaseURL=".."</script><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.min.js" data-main="../assets/documenter.js"></script><script src="../search_index.js"></script><script src="../siteinfo.js"></script><script src="../../versions.js"></script><link class="docs-theme-link" rel="stylesheet" type="text/css" href="../assets/themes/catppuccin-mocha.css" data-theme-name="catppuccin-mocha"/><link class="docs-theme-link" rel="stylesheet" type="text/css" href="../assets/themes/catppuccin-macchiato.css" data-theme-name="catppuccin-macchiato"/><link class="docs-theme-link" rel="stylesheet" type="text/css" href="../assets/themes/catppuccin-frappe.css" data-theme-name="catppuccin-frappe"/><link class="docs-theme-link" rel="stylesheet" type="text/css" href="../assets/themes/catppuccin-latte.css" data-theme-name="catppuccin-latte"/><link class="docs-theme-link" rel="stylesheet" type="text/css" href="../assets/themes/documenter-dark.css" data-theme-name="documenter-dark" data-theme-primary-dark/><link class="docs-theme-link" rel="stylesheet" type="text/css" href="../assets/themes/documenter-light.css" data-theme-name="documenter-light" data-theme-primary/><script src="../assets/themeswap.js"></script></head><body><div id="documenter"><nav class="docs-sidebar"><div class="docs-package-name"><span class="docs-autofit"><a href="../">StochasticInterpolants.jl</a></span></div><button class="docs-search-query input is-rounded is-small is-clickable my-2 mx-auto py-1 px-2" id="documenter-search-query">Search docs (Ctrl + /)</button><ul class="docs-menu"><li><a class="tocitem" href="../">Home</a></li><li class="is-active"><a class="tocitem" href>Example</a></li></ul><div class="docs-version-selector field has-addons"><div class="control"><span class="docs-label button is-static is-size-7">Version</span></div><div class="docs-selector control is-expanded"><div class="select is-fullwidth is-size-7"><select id="documenter-version-selector"></select></div></div></div></nav><div class="docs-main"><header class="docs-navbar"><a class="docs-sidebar-button docs-navbar-link fa-solid fa-bars is-hidden-desktop" id="documenter-sidebar-button" href="#"></a><nav class="breadcrumb"><ul class="is-hidden-mobile"><li class="is-active"><a href>Example</a></li></ul><ul class="is-hidden-tablet"><li class="is-active"><a href>Example</a></li></ul></nav><div class="docs-right"><a class="docs-navbar-link" href="https://github.com/nmucke/StochasticInterpolants.jl" title="View the repository on GitHub"><span class="docs-icon fa-brands"></span><span class="docs-label is-hidden-touch">GitHub</span></a><a class="docs-navbar-link" href="https://github.com/nmucke/StochasticInterpolants.jl/blob/main/docs/src/example.md" title="Edit source on GitHub"><span class="docs-icon fa-solid"></span></a><a class="docs-settings-button docs-navbar-link fa-solid fa-gear" id="documenter-settings-button" href="#" title="Settings"></a><a class="docs-article-toggle-button fa-solid fa-chevron-up" id="documenter-article-toggle-button" href="javascript:;" title="Collapse all docstrings"></a></div></header><article class="content" id="documenter-page"><h1 id="Example"><a class="docs-heading-anchor" href="#Example">Example</a><a id="Example-1"></a><a class="docs-heading-anchor-permalink" href="#Example" title="Permalink"></a></h1><pre><code class="language-julia hljs"># Load relevant packages
+using StochasticInterpolants
+using Random
+using Lux
+using LuxCUDA
+using Optimisers
+
+# Set the seed
+rng = Random.default_rng();
+Random.seed!(rng, 0);
+
+# Get the device determined by Lux
+dev = gpu_device();
+cpu_dev = LuxCPUDevice();
+
+# Choose test problem
+test_case = &quot;kolmogorov&quot;;
+
+# Choose test case
+test_args = &quot;pars_low&quot;;</code></pre><p>The test problem and test case determines which data and model config file to load. The data config file contains information about the data, such as the mask, the normalizer, and the number of parameters. The model config file contains information about the model and the training, such as the neural network architecture, the optimizer, and the training parameters.</p><pre><code class="language-julia hljs"># Load train data, test data, data normalizer, and mask given by the config file
+# Depending on the test case, mask and normalize_data might be nothing
+trainset, trainset_pars, testset, testset_pars, normalize_data, mask, num_pars = load_test_case_data(
+    test_case, 
+    test_args,
+);
+mask = mask |&gt; dev;
+
+num_train = size(trainset, 5); # Number of training trajectories
+num_steps = size(trainset, 4); # Number of training steps
+H, W, C = size(trainset, 1), size(trainset, 2), size(trainset, 3); # Dimensions of the data</code></pre><pre><code class="language-julia hljs"># Setup checkpoint manager that handles saving and loading of models
+# and the training progress
+model_base_dir = &quot;trained_models/&quot;;
+model_name = &quot;forecasting_model_not_optimized&quot;;
+
+config = YAML.load_file(&quot;configs/neural_networks/$test_case.yml&quot;);
+
+checkpoint_manager = CheckpointManager(
+    test_case, model_name; 
+    neural_network_config=config, 
+    data_config=YAML.load_file(&quot;configs/test_cases/$test_case.yml&quot;),
+    base_folder=model_base_dir
+);</code></pre><pre><code class="language-julia hljs"># Prepare the data for time stepping
+# This function takes the training data and the training parameters
+# and returns the data in the format required for time stepping
+trainset = prepare_data_for_time_stepping(  
+    trainset,
+    trainset_pars;
+    len_history=config[&quot;model_args&quot;][&quot;len_history&quot;]
+);</code></pre><pre><code class="language-julia hljs"># Define the velocity model
+velocity = get_SI_neural_network(;
+    image_size=(H, W),
+    model_params=config[&quot;model_args&quot;]
+);</code></pre><pre><code class="language-julia hljs"># Get Interpolant
+interpolant = get_interpolant(
+    config[&quot;interpolant_args&quot;][&quot;alpha&quot;],
+    config[&quot;interpolant_args&quot;][&quot;beta&quot;],
+    config[&quot;interpolant_args&quot;][&quot;gamma&quot;],
+    T(config[&quot;interpolant_args&quot;][&quot;gamma_multiplier&quot;]),
+);
+
+# Get diffusion coefficient
+diffusion_coefficient = get_diffusion_coefficient(
+    config[&quot;diffusion_args&quot;][&quot;type&quot;],
+    T(config[&quot;diffusion_args&quot;][&quot;multiplier&quot;]),
+);
+
+# Get projection if specified in the config
+if config[&quot;model_args&quot;][&quot;projection&quot;] == &quot;divergence_free&quot;
+    projection = project_onto_divergence_free;
+else
+    projection = nothing;
+end;</code></pre><pre><code class="language-julia hljs"># Setup the SI model
+model = FollmerStochasticInterpolant(
+    velocity; 
+    interpolant=interpolant,
+    diffusion_coefficient=diffusion_coefficient, #t -&gt; get_gamma_series(t, coefs[3, :]), #diffusion_coefficient,
+    projection=projection,
+    len_history=config[&quot;model_args&quot;][&quot;len_history&quot;],
+    dev=dev
+);
+
+# Initialise model and move to device
+ps, st = Lux.setup(rng, model) .|&gt; dev;
+
+# Setup the optimiser
+opt = Optimisers.AdamW(
+    T(config[&quot;optimizer_args&quot;][&quot;learning_rate&quot;]), 
+    (0.9f0, 0.99f0), 
+    T(config[&quot;optimizer_args&quot;][&quot;weight_decay&quot;])
+);
+
+# Initialise the optimiser
+opt_state = Optimisers.setup(opt, ps);</code></pre><pre><code class="language-julia hljs"># Train the model
+ps, st = train_stochastic_interpolant(
+    model=model,
+    ps=ps,
+    st=st,
+    opt_state=opt_state,
+    trainset=trainset, 
+    testset=(state=testset, pars=testset_pars),
+    checkpoint_manager=checkpoint_manager,
+    training_args=config[&quot;training_args&quot;],
+    normalize_data=normalize_data,
+    mask=mask,  
+    rng=rng,
+    dev=dev
+);</code></pre></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../">« Home</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="auto">Automatic (OS)</option><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="catppuccin-latte">catppuccin-latte</option><option value="catppuccin-frappe">catppuccin-frappe</option><option value="catppuccin-macchiato">catppuccin-macchiato</option><option value="catppuccin-mocha">catppuccin-mocha</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.8.0 on <span class="colophon-date" title="Tuesday 7 January 2025 10:29">Tuesday 7 January 2025</span>. Using Julia version 1.11.2.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
